# CDI

./: .rustfmt.toml  Cargo.toml  run.bat  run.sh
.cargo/: config.toml
src/: allocator.rs  gdt.rs  interrupts.rs  lib.rs  main.rs  memory.rs  serial.rs  system.rs  vga_buffer.rs
src/allocator/: linked_list.rs
src/system/: statistics.rs
