[package]
name = "CDI"
version = "0.1.0"
authors = ["Jackson Oliver <44202374+applesthepi@users.noreply.github.com>"]
edition = "2018"

[dependencies]
rlibc = "1.0.0"
volatile = "0.3.0"
spin = "0.5.2"
x86_64 = "0.11.2"
uart_16550 = "0.2.7"
pic8259_simple = "0.2.0"
pc-keyboard = "0.5.1"
linked_list_allocator = "0.8.5"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[package.metadata.bootimage]
test-args = [
    "-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio"
]

[dependencies.bootloader]
version = "0.9.8"
features = ["map_physical_memory"]